src/objects/KnowledgeSearch__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>App__c</fullName>
        <defaultValue>&apos;/search#/search&apos;</defaultValue>
        <label>Search App</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KAV_or_Category__c</fullName>
        <label>KAV or Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Facet of the Search App</description>
        <inlineHelpText>Facet of the Search App</inlineHelpText>
        <label>Search App Facet</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Knowledge Search</label>
</CustomObject>